--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,20 @@
 {
   "name": "Zephyr Mtg Search",
   "description": "For searching mtg sites",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "version": "0.1",
   "permissions": [
-    "contextMenus", 
+    "contextMenus",
+    "scripting",
+    "activeTab"
+  ],
+  "host_permissions":[
     "https://www.mtggoldfish.com/",
     "https://www.cardmarket.com/",
     "https://*/*",
     "http://*/*"
   ],
   "background": {
-    "scripts": [
-        "jquery-3.5.1.min.js",
-        "background.js"
-    ]
+    "service_worker": "background.js"
   }
 }
